--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^13.5.0",
-    "app": "^0.1.0",
+    "@testing-library/user-event": "^13.5.0",    
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
@@ -42,6 +41,16 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "test.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/repti85/bulls_and_cows.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/repti85/bulls_and_cows/issues"
   }
-  
 }
